--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title></title>
+  <title>nesTweet</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -26,9 +26,16 @@
     {{/view}}
   </script>
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
-  <script>!window.jQuery && document.write(unescape('%3Cscript src="js/libs/jquery-1.6.1.min.js"%3E%3C/script%3E'))</script>
-  <script src="js/libs/ember-0.9.5.min.js"></script>
+  <script type="text/x-handlebars">
+	{{#collection contentBinding="App.tweetController" tagName="ul"}}
+		<img {{bindAttr src="content.profileImageUrl"}} alt"avatar">
+		{{content.text}}
+	{{/collection}}
+  </script>
+
+
+  <script src="js/libs/jquery-1.7.2.js"></script>
+  <script src="js/libs/ember-0.9.5.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
