--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <script type="text/x-handlebars">
 	{{#collection contentBinding="App.tweetController" tagName="ul"}}
 		<img {{bindAttr src="content.profileImageUrl"}} alt"avatar">
+		<h2>{{content.username}}</h2>
 		{{content.text}}
 	{{/collection}}
   </script>
