--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		<li>term2: {{view Ember.TextField valueBinding="App.searchController.term2"}}</li>
 		</ul>
 		</script>
+		<div id="tbox"></div>
 	</nav>
   
 	<section>
