correct handlebars breaking inline links

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		{{#collection contentBinding="App.display" tagName="ul"}}
 			<img {{bindAttr src="content.profileImageUrl"}} alt"avatar">
 			<span id="user" {{bindAttr title="content.user"}}>{{content.username}}</span><br>
-			{{content.ctext}}
+			{{{content.ctext}}}
 		{{/collection}}
 	</script>
 	</section>
