added favorite and reply buttons using web intent

--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
 			<img {{bindAttr src="content.profileImageUrl"}} alt"avatar">
 			<span id="user" {{bindAttr title="content.user"}}>{{content.username}}</span><br>
 			{{{content.ctext}}}
-			<a {{bindAttr href="content.retweet"}} class="rt"></a>
+			<div class="tweetmenu">
+				<a {{bindAttr href="content.retweet"}} class="rt"></a>
+				<a {{bindAttr href="content.favorite"}} class="fav"></a>
+				<a {{bindAttr href="content.reply"}} class="reply"></a>
+			</div>
 		{{/collection}}
 	</script>
 	</section>
