--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
+  	<meta name = "viewport" content = "width=500">
 </head>
 <body>
 	<header>
