--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="stylesheet" href="css/style.css?v=2">
 
-  <script src="http://platform.twitter.com/anywhere.js?id=DQqHHHa9WcxJmsQ3yarag&v=1"></script>
+  <script src="http://platform.twitter.com/anywhere.js?id=YOURCONSUMERKEYHERE&v=1"></script>
   <script type="text/javascript" charset="utf-8">
 		window.twttr = (function (d,s,id) {
 			var t, js, fjs = d.getElementsByTagName(s)[0];
